--- a/README.org
+++ b/README.org
@@ -1,37 +1,31 @@
 * TDiary::Style::Org
-Org-mode style for tDiary format.
-
+  Org-mode style for tDiary format.
 ** Installation
-Add this line to your application's Gemfile:
-#+BEGIN_SRC ruby
-  gem 'tdiary-style-org'
-#+END_SRC
-
-And then execute:
-#+BEGIN_EXAMPLE
-  % bundle
-#+END_EXAMPLE
-Or install it yourself as:
-#+BEGIN_EXAMPLE
-  % gem install tdiary-style-org
-#+END_EXAMPLE
-
+   Add this line to your application's Gemfile.local:
+   #+BEGIN_SRC ruby
+     gem 'tdiary-style-org'
+   #+END_SRC
+   And then execute:
+   #+BEGIN_EXAMPLE
+     % bundle install
+   #+END_EXAMPLE
+   Or install it yourself as:
+   #+BEGIN_EXAMPLE
+     % gem install tdiary-style-org
+   #+END_EXAMPLE
 ** Usage
-If you want to use this style, add @style into tdiary.conf below:
-#+BEGIN_SRC ruby
-  @style = 'Org'
-#+END_SRC
-
+   If you want to use this style, add @style into tdiary.conf below:
+   #+BEGIN_SRC ruby
+     @style = 'Org'
+   #+END_SRC
 ** Contributing
-1. Fork it
-2. Create your feature branch (`git checkout -b my-new-feature`)
-3. Commit your changes (`git commit -am 'Add some feature'`)
-4. Push to the branch (`git push origin my-new-feature`)
-5. Create new Pull Request
-
+   1. Fork it
+   2. Create your feature branch (`git checkout -b my-new-feature`)
+   3. Commit your changes (`git commit -am 'Add some feature'`)
+   4. Push to the branch (`git push origin my-new-feature`)
+   5. Create new Pull Request
 ** TODO ToDo [/]
    - [ ] can't handlinng "alt" in image link: due to org-ruby limitation.
-
 ** Copyright
   #+BEGIN_EXAMPLE
     Copyright (c) 2015 Youhei SASAKI <uwabami@gfd-dennou.org>
