Update copyright year
Signed-off-by: Youhei SASAKI <uwabami@gfd-dennou.org>

--- a/README.org
+++ b/README.org
@@ -35,7 +35,7 @@
      - [ ] can't handlinng "alt" in image link: due to org-ruby limitation.
 ** Copyright
   #+BEGIN_EXAMPLE
-    Copyright (c) 2015 Youhei SASAKI <uwabami@gfd-dennou.org>
+    Copyright (c) 2015-2016 Youhei SASAKI <uwabami@gfd-dennou.org>
 
     MIT License
 
